# toyforth

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/interpreter/: CMakeLists.txt  android_main.c  debug.h  desktop_main.c  jni_main.c  utils.h
app/src/main/interpreter/compiler/: compiler.c  compiler.h
app/src/main/interpreter/data/: s_tfcontext.c  s_tfcontext.h  s_tfobj.c  s_tfobj.h  s_tfparser.c  s_tfparser.h
app/src/main/interpreter/runtime/: runtime.c  runtime.h
app/src/main/kotlin/com/app/toyforth/: MainActivity.kt
app/src/main/kotlin/com/app/toyforth/core/: Logger.kt
app/src/main/kotlin/com/app/toyforth/domain/: Line.kt
app/src/main/kotlin/com/app/toyforth/guide/: GuideActivity.kt
app/src/main/kotlin/com/app/toyforth/presentation/: MainScreen.kt  MainViewModel.kt
app/src/main/res/drawable/: main_icon.xml
app/src/main/res/mipmap-anydpi-v26/: mpm_icon.xml
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
